// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bdvvaa sc-gsDJrp jIMkcL bHbRuQ"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bdvvaa sc-gsDJrp ilmKZo bHbRuQ"
>
  foo
</button>
`;
